# break-infinity.rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  changelog.md  readme.md
.run/: Test.run.xml
src/: lib.rs  macros.rs  test.rs
tests/: test.rs
