[package]
name = "break_infinity"
version = "0.2.1"
edition = "2018"

authors = ["Redfire <redfire75369@hotmail.com>"]
license = "MPL-2.0"
description = "A library for larger numbers up to 1e1.79e308 in Rust for Incremental Games"
homepage = "https://github.com/Redfire75369/break-infinity.rs#readme"
documentation = "https://docs.rs/break_infinity"
repository = "https://github.com/Redfire75369/break-infinity.rs"
readme = "readme.md"

keywords = [
	"incremental",
	"math",
	"decimal",
	"large-number",
	"big-number"
]
categories = [
	"game-development",
	"mathematics"
]

exclude = [
	".editorconfig",
	".gitignore",
	".run"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.5.2"
rand = "0.8.0"
