[package]
name = "break_infinity"
version = "0.4.0"
edition = "2018"

authors = ["Redfire <redfire75369@hotmail.com>"]
license = "MPL-2.0"
description = "A library for larger numbers up to 1e9e15 in Rust for Incremental Games"
homepage = "https://github.com/redfire75369/break-infinity.rs#readme"
documentation = "https://docs.rs/break_infinity"
repository = "https://github.com/redfire75369/break-infinity.rs"
readme = "readme.md"

keywords = [
	"incremental",
	"math",
	"decimal",
	"large-number",
	"big-number"
]
categories = [
	"game-development",
	"mathematics"
]

exclude = [
	".editorconfig",
	".gitignore"
]

[features]
full-range = []
serde = ["dep:serde"]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
